Change max line length to 80, style to IntelliJ

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,9 @@
 project.git = true
+style =  IntelliJ
+continuationIndent.callSite = 2
 align = none
-maxColumn = 100
+align.openParenCallSite = false
+newlines.penalizeSingleSelectMultiArgList = false
+danglingParentheses = true
 onTestFailure = "To fix this, run ./scalafmt from the project root directory"
 
