Remove for case arrows

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,6 +2,7 @@ project.git = true
 style =  IntelliJ
 continuationIndent.callSite = 2
 align = none
+align.tokens = []
 align.openParenCallSite = false
 newlines.penalizeSingleSelectMultiArgList = false
 danglingParentheses = true
