Don't indent yield keyword

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,5 +7,6 @@ align.tokens = []
 align.openParenCallSite = false
 newlines.penalizeSingleSelectMultiArgList = false
 danglingParentheses = true
+indentYieldKeyword = false
 onTestFailure = "To fix this, run ./scalafmt from the project root directory"
 
