Formatting for newline before semicolon in method return type Config style arguments

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,8 +5,9 @@ continuationIndent.callSite = 2
 align = none
 align.tokens = []
 align.openParenCallSite = false
+newlines.sometimesBeforeColonInMethodReturnType = true
 newlines.penalizeSingleSelectMultiArgList = false
 danglingParentheses = true
 indentYieldKeyword = false
+optIn.configStyleArguments = true
 onTestFailure = "To fix this, run ./scalafmt from the project root directory"
-
