--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
     env: CI_SCRIPT=ci/test-mill-release.sh
   - stage: release
     env: CI_SCRIPT=ci/release.py
+  - stage: release
+    env: CI_SCRIPT=ci/publish-docs.sh
 
 script:
   - "$CI_SCRIPT"
