Resolve individual Scala files before passing them to `ScalaModule#compile`, to ensure other rubbish in the source folders (e.g. vim `.swp` files) do not trigger spurious recompiles

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
   - stage: build
     env: CI_SCRIPT=ci/test-mill-release.sh
   - stage: release
-    env: CI_SCRIPT="ci/on-master.py ci/release.py"
+    env: CI_SCRIPT="ci/on-master.py ci/release.sh"
   - stage: release
     env: CI_SCRIPT="ci/on-master.py ci/publish-docs.sh"
 
