--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
     env: CI_SCRIPT="ci/on-master.py ci/publish-docs.sh"
 
 script:
+  - git fetch --unshallow --tags
   - "$CI_SCRIPT"
 cache:
   directories:
