--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,22 +15,21 @@ environment:
     MSYS2_DIR: msys64
     MSYSTEM: MINGW64
     BIT: 64
-    JAVA_HOME: 'C:\Program Files\Java\jdk1.8.0'
-    PATH: '%JAVA_HOME%\bin;C:\bin;C:\%MSYS2_DIR%\%MSYSTEM%\bin;C:\%MSYS2_DIR%\usr\bin;%PATH%'
+    JAVA_HOME: C:\Program Files\Java\jdk1.8.0
   - COMPILER: msys2
     PLATFORM: x64
     MSYS2_ARCH: x86_64
     MSYS2_DIR: msys64
     MSYSTEM: MINGW64
     BIT: 64
-    JAVA_HOME: 'C:\Program Files\Java\jdk9'
-    PATH: '%JAVA_HOME%\bin;C:\bin;C:\%MSYS2_DIR%\%MSYSTEM%\bin;C:\%MSYS2_DIR%\usr\bin;%PATH%'
+    JAVA_HOME: C:\Program Files\Java\jdk9
 
 cache:
   - '%LOCALAPPDATA%\Coursier\cache'
 
 install:
-  - java -version
+  - cmd: SET PATH=%JAVA_HOME%\bin;C:\bin;C:\%MSYS2_DIR%\%MSYSTEM%\bin;C:\%MSYS2_DIR%\usr\bin;%PATH%
+  - cmd: java -version
   - bash -lc "mkdir /c/bin && curl -Lo /c/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.4/0.1.4-22-95e6cb"
 
 build_script:
