--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,7 +30,7 @@ cache:
 install:
   - cmd: SET PATH=%JAVA_HOME%\bin;C:\bin;C:\%MSYS2_DIR%\%MSYSTEM%\bin;C:\%MSYS2_DIR%\usr\bin;%PATH%
   - cmd: java -version
-  - bash -lc "mkdir /c/bin && curl -Lo /c/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.4/0.1.4-22-95e6cb"
+  - bash -lc "mkdir /c/bin && curl -Lo /c/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.5/0.1.5"
 
 build_script:
   - bash -lc "cd /c/mill && mill -i all main.test scalajslib.test"
