Revert "Test publishLocal and release on AppVeyor and uses the resulting mill to test mill."
This reverts commit ace63c8b62de19e8d59e369b54939ed7b73edfde.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,5 +33,4 @@ install:
   - bash -lc "mkdir /c/bin && curl -Lo /c/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.6/0.1.6"
 
 build_script:
-  - bash -lc "cd /c/mill && mill -i all __.publishLocal release main.test scalajslib.test"
-  - bash -lc "cd /c/mill && out/release/dest/mill all main.test scalajslib.test"
+  - bash -lc "cd /c/mill && mill -i all main.test scalajslib.test"
