--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,6 +9,9 @@ clone_folder: c:\mill
 
 environment:
   matrix:
+  - COMPILER: cygwin
+    CYGWIN_DIR: cygwin64
+    JAVA_HOME: C:\Program Files\Java\jdk9
   - COMPILER: msys2
     MSYS2_ARCH: x86_64
     MSYS2_DIR: msys64
@@ -19,25 +22,27 @@ environment:
     MSYS2_DIR: msys64
     MSYSTEM: MINGW64
     JAVA_HOME: C:\Program Files\Java\jdk9
-  - COMPILER: cygwin
-    CYGWIN_DIR: cygwin64
-    JAVA_HOME: C:\Program Files\Java\jdk9
 
 cache:
-  - '%LOCALAPPDATA%\Coursier\cache'
-  - '%USERPROFILE%\.coursier'
+  - build.sc -> '%LOCALAPPDATA%\Coursier\cache'
 
 install:
-  - if [%COMPILER%]==[cygwin] SET "PATH=%JAVA_HOME%\bin;C:\bin;C:\%CYGWIN_DIR%\bin;C:\%CYGWIN_DIR%\usr\bin;%PATH%"
-  - if [%COMPILER%]==[msys2] SET "PATH=%JAVA_HOME%\bin;C:\bin;C:\%MSYS2_DIR%\%MSYSTEM%\bin;C:\%MSYS2_DIR%\usr\bin;%PATH%"
-  - java -version
-  - md C:\bin
-  - curl -Lo C:\bin\mill https://github.com/lihaoyi/mill/releases/download/0.1.6/0.1.6-3-43d230
+  - SET MILL_URL=https://github.com/lihaoyi/mill/releases/download/0.1.6/0.1.6-3-43d230
 
 build_script:
-  - if [%COMPILER%]==[cygwin] (
-      C:\%CYGWIN_DIR%\bin\bash -lc 'sed -i '"'"'0,/-cp "\$0"/{s/-cp "\$0"/-cp `cygpath -w "\$0"`/}; 0,/-cp "\$0"/{s/-cp "\$0"/-cp `cygpath -w "\$0"`/}'"'"' /cygdrive/c/bin/mill' &&
-      C:\%CYGWIN_DIR%\bin\bash -lc "cd /cygdrive/c/mill && mill all main.test scalajslib.test")
   - if [%COMPILER%]==[msys2] (
-      C:\%MSYS2_DIR%\usr\bin\bash -lc "cd /c/mill && mill -i all __.publishLocal release"
+      SET "PATH=%JAVA_HOME%\bin;C:\%MSYS2_DIR%\%MSYSTEM%\bin;C:\%MSYS2_DIR%\usr\bin;%PATH%" &&
+      C:\%MSYS2_DIR%\usr\bin\bash -lc 'mkdir -p /usr/local/bin' &&
+      C:\%MSYS2_DIR%\usr\bin\bash -lc "curl -Lo /usr/local/bin/mill %MILL_URL%" &&
+      C:\%MSYS2_DIR%\usr\bin\bash -lc 'chmod +x /usr/local/bin/mill' &&
+      C:\%MSYS2_DIR%\usr\bin\bash -lc "cd /c/mill && mill -i all __.publishLocal release" &&
       C:\%MSYS2_DIR%\usr\bin\bash -lc "cd /c/mill && out/release/dest/mill all main.test scalajslib.test")
+  - if [%COMPILER%]==[cygwin] (
+      SET "PATH=%JAVA_HOME%\bin;C:\%CYGWIN_DIR%\bin;C:\%CYGWIN_DIR%\usr\bin;%PATH%" &&
+      C:\%CYGWIN_DIR%\bin\bash -lc 'mkdir -p /usr/local/bin' &&
+      C:\%CYGWIN_DIR%\bin\bash -lc "curl -Lo /usr/local/bin/mill %MILL_URL%" &&
+      C:\%CYGWIN_DIR%\bin\bash -lc 'sed -i '"'"'0,/-cp "\$0"/{s/-cp "\$0"/-cp `cygpath -w "\$0"`/}; 0,/-cp "\$0"/{s/-cp "\$0"/-cp `cygpath -w "\$0"`/}'"'"' /usr/local/bin/mill' &&
+      C:\%CYGWIN_DIR%\bin\bash -lc 'chmod +x /usr/local/bin/mill' &&
+      C:\%CYGWIN_DIR%\bin\bash -lc "cd /cygdrive/c/mill && mill -i all main.test scalajslib.test")
+
+skip_branch_with_pr: true
