--- a/integration/test/resources/play-json/.travis.yml
+++ b/integration/test/resources/play-json/.travis.yml
@@ -3,6 +3,7 @@ sudo: required
 dist: trusty
 
 scala:
+- 2.13.0-M3
 - 2.12.4
 - 2.11.12
 - 2.10.7
@@ -19,7 +20,7 @@ matrix:
       jdk: oraclejdk9
 
 script:
-  - curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.6/0.1.6 && chmod +x ~/bin/mill
+  - curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.6/0.1.6-25-cb30f1 && chmod +x ~/bin/mill
   - export PATH=~/bin/mill:$PATH
   - mill all validateCode reportBinaryIssues __[$TRAVIS_SCALA_VERSION].test
 
