update mill version in travis.yml

--- a/integration/test/resources/play-json/.travis.yml
+++ b/integration/test/resources/play-json/.travis.yml
@@ -20,7 +20,7 @@ matrix:
       jdk: oraclejdk9
 
 script:
-  - curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.6/0.1.6-25-cb30f1 && chmod +x ~/bin/mill
+  - curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.7/0.1.7-8-b913c6 && chmod +x ~/bin/mill
   - export PATH=~/bin/mill:$PATH
   - mill all validateCode reportBinaryIssues __[$TRAVIS_SCALA_VERSION].test
 
