--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,7 +24,7 @@ environment:
     JAVA_HOME: C:\Program Files\Java\jdk9
 
 cache:
-  - '%LOCALAPPDATA%\Coursier\cache'
+  - '%LOCALAPPDATA%\Coursier\cache -> build.sc'
 
 install:
   - SET MILL_URL=https://github.com/lihaoyi/mill/releases/download/0.1.7/0.1.7-8-b913c6
