Updated ci tests.
* Reverted Ammonite caching workaround (a796f0a) now that it's fixed

* Changed ci/test-mill-0.sh to use interactive mode due to intermittent client failures to connect to server in travis

* Added ci/test-mill-bootstrap.sh (ci/test-mill-0.sh with bootstrapping) and use it on oraclejdk9 instead of ci/test-mill-0.sh

* Upgraded mill used for ci to 0.1.7-29-f5097f

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: trusty
 matrix:
   include:
   - stage: build
-    env: CI_SCRIPT=ci/test-mill-0.sh
+    env: CI_SCRIPT=ci/test-mill-bootstrap.sh
     jdk: oraclejdk9
   - stage: build
     env: CI_SCRIPT=ci/test-mill-0.sh
@@ -36,7 +36,7 @@ matrix:
     jdk: oraclejdk8
 
 script:
-  - curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.7/0.1.7-8-b913c6 && chmod +x ~/bin/mill
+  - curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.7/0.1.7-29-f5097f && chmod +x ~/bin/mill
   - export PATH=~/bin/mill:$PATH
   - "$CI_SCRIPT"
 
