--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,7 +27,7 @@ cache:
   - '%LOCALAPPDATA%\Coursier\cache -> build.sc'
 
 install:
-  - SET MILL_URL=https://github.com/lihaoyi/mill/releases/download/0.1.7/0.1.7-8-b913c6
+  - SET MILL_URL=https://github.com/lihaoyi/mill/releases/download/0.1.7/0.1.7-29-f5097f
 
 build_script:
   - if [%COMPILER%]==[msys2] (
