--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,7 +24,7 @@ cache:
   - '%LOCALAPPDATA%\Coursier\cache -> build.sc'
 
 install:
-  - SET MILL_URL=https://github.com/lihaoyi/mill/releases/download/0.1.7/0.1.7-29-f5097f
+  - SET MILL_URL=https://github.com/lihaoyi/mill/releases/download/0.1.7/0.1.7-53-cc0407
 
 build_script:
   - if [%COMPILER%]==[default] (
