--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,7 +21,7 @@ environment:
     JAVA_HOME: C:\Program Files\Java\jdk10
 
 install:
-  - SET MILL_URL=https://github.com/lihaoyi/mill/releases/download/0.2.7/0.2.7-10-db8525
+  - SET MILL_URL=https://github.com/lihaoyi/mill/releases/download/0.4.2/0.4.2
 
 build_script:
   - if [%COMPILER%]==[default] (
