Add Scala Native 0.4.0-M2 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: scala
 os: linux
 dist: trusty
+before_install:
+- curl https://raw.githubusercontent.com/scala-native/scala-native/master/scripts/travis_setup.sh | bash -
 
 git:
   depth: false
