Fixed deprecated and info warnings from Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: scala
-sudo: required
+os: linux
 dist: trusty
 
 git:
   depth: false
 
-matrix:
+jobs:
   include:
   - stage: build
     env: CI_SCRIPT=ci/test-mill-release.sh
