--- a/.travis.yml
+++ b/.travis.yml
@@ -60,5 +60,5 @@ script:
 
 cache:
   directories:
-  - $HOME/.coursier
-  - $HOME/.mill/download
+  - $HOME/.cache/oursier
+  - $HOME/.cache/mill/download
