--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,11 +1,6 @@
+version = 2.5.2
+maxColumn = 120
 align = none
-align.openParenCallSite = false
-
 assumeStandardLibraryStripMargin = true
-
-continuationIndent.callSite = 2
-continuationIndent.defnSite = 4
-
 docstrings = JavaDoc
-
 #newlines.afterImplicitParamListModifier = true
