--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,8 @@ jobs:
         with:
           java-version: ${{ matrix.java-version }}
 
-      - run: |
+      - name: Run '${{ matrix.buildcmd }}'
+        run: |
           git config --add user.name "Mill GithHub Actions"
           git config --add user.email "mill-ci@fake-tld.com"
           ${{ matrix.buildcmd }}
