--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,9 @@ jobs:
           - ci/test-mill-1.sh
           - ci/test-mill-2.sh
           - ./mill -i docs.generate
+        exclude:
+          - java-version: 11
+            buildcmd: ci/test-mill-1.sh
 
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.os == 'windows-latest' }}
