--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,10 @@ jobs:
         with:
           java-version: ${{ matrix.java-version }}
 
+      - name: Prepare build
+        if: matrix.buildcmd == 'ci/test-mill-dev.sh'
+        run: apt-get install libunwind8-dev
+
       - name: Run '${{ matrix.buildcmd }}'
         run: |
           git config --add user.name "Mill GithHub Actions"
