Moved mill.bat into ci dir

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           java-version: ${{ matrix.java-version }}
 
-      - run: cmd /C %GITHUB_WORKSPACE%\mill.bat -i "{__.publishLocal,assembly}"
+      - run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{__.publishLocal,assembly}"
       - run: rd /S /Q %USERPROFILE%\.mill
       - run: cmd /C %GITHUB_WORKSPACE%\out\assembly\dest\mill -i "{main.test,scalajslib.test}"
 
