--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -48,14 +48,39 @@ jobs:
           git config --add user.email "mill-ci@localhost"
           ${{ matrix.buildcmd }}
 
-  publish:
+  publish-sonatype:
     if: github.repository == 'lihaoyi/mill' && github.ref == 'refs/heads/master'
     needs: build
+
+    runs-on: ubuntu-latest
+
+    env:
+      SONATYPE_PGP_SECRET: ${{ secrets.SONATYPE_PGP_SECRET }}
+      SONATYPE_DEPLOY_USER: ${{ secrets.SONATYPE_DEPLOY_USER }}
+      SONATYPE_DEPLOY_PASSWORD: ${{ secrets.SONATYPE_DEPLOY_PASSWORD }}
+      SONATYPE_PGP_PASSWORD: ${{ secrets.SONATYPE_PGP_PASSWORD }}
+      LANG: "en_US.UTF-8"
+      LC_MESSAGES: "en_US.UTF-8"
+      LC_ALL: "en_US.UTF-8"
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 9
+
+      - run: ci/on-master.py ci/release-github.sh
+
+  release-github-and-site:
+    if: github.repository == 'lihaoyi/mill' && github.ref == 'refs/heads/master'
+    needs: publish-sonatype
 
     strategy:
       matrix:
         buildcmd:
-          - ci/on-master.py ci/release-github.sh
           - ci/on-master.py ci/release-maven.sh
           - ci/on-master.py ci/publish-docs.sh
 
@@ -64,10 +89,6 @@ jobs:
     env:
       REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       REPO_DEPLOY_KEY: ${{ secrets.REPO_DEPLOY_KEY }}
-      SONATYPE_PGP_SECRET: ${{ secrets.SONATYPE_PGP_SECRET }}
-      SONATYPE_DEPLOY_USER: ${{ secrets.SONATYPE_DEPLOY_USER }}
-      SONATYPE_DEPLOY_PASSWORD: ${{ secrets.SONATYPE_DEPLOY_PASSWORD }}
-      SONATYPE_PGP_PASSWORD: ${{ secrets.SONATYPE_PGP_PASSWORD }}
       LANG: "en_US.UTF-8"
       LC_MESSAGES: "en_US.UTF-8"
       LC_ALL: "en_US.UTF-8"
