--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           java-version: 9
 
-      - run: ci/on-master.py ci/release-github.sh
+      - run: ci/on-master.py ci/release-maven.sh
 
   release-github-and-site:
     if: github.repository == 'lihaoyi/mill' && github.ref == 'refs/heads/master'
@@ -81,7 +81,7 @@ jobs:
     strategy:
       matrix:
         buildcmd:
-          - ci/on-master.py ci/release-maven.sh
+          - ci/on-master.py ci/release-github.sh
           - ci/on-master.py ci/publish-docs.sh
 
     runs-on: ubuntu-latest
@@ -89,9 +89,6 @@ jobs:
     env:
       REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       REPO_DEPLOY_KEY: ${{ secrets.REPO_DEPLOY_KEY }}
-      LANG: "en_US.UTF-8"
-      LC_MESSAGES: "en_US.UTF-8"
-      LC_ALL: "en_US.UTF-8"
 
     steps:
       - uses: actions/checkout@v2
