Github Workflow Actions setup (#993)
Two significant changes: 
1. we now use a build matrix, 
2. we publish to Maven Central after all tests were successful and only after a successful Maven push we publish Github and site

Commits: 

* Added github actions workflow
* Added publish workflow/job
* Try to fix GH Actions build
* Better job name
* Exclude test run known to have issues with Java 11
* Excluded another Java 11 compile issue
* Install libunwind8-dev for scala-native tests
* Added sudo to apt-get command
* Added optional re2 lib to fix another native build issue
* Always install scala-native deps
* Check if publish workflow would work this way
* Revert "Check if publish workflow would work this way"
This reverts commit 9b74abebf428c69787545a4ceb072bcae429a0db.
* Added experimental windows build setup
* Added mill.bat
* Use cmd to run mill
* naive attempt to fix download path for mill
* Updated mill.bat to support snapshot versions
* Skip docjar releated errors on Win+Java11 for now
* Merged separate publish workflow into build.yml
* Moved mill.bat into ci dir
* Use cmd to execute command with env variable
* Merged github action scripts
* First publish to sonatype, then to github and site
An updated site and github release page only makes sense, if we successfully released to Maven Central.
* Renamed jobs
* Fixed publish scripts

Pull request: https://github.com/lihaoyi/mill/pull/993

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,5 @@
 name: ci-push-validation
+
 on:
   push:
     branches:
@@ -7,81 +8,52 @@ on:
     branches:
       - master
 jobs:
-  test-release-jdk8:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
-      - uses: actions/setup-java@v1
-        with: {java-version: '8'}
-      - run: ci/test-mill-release.sh
 
-  test-dev-jdk11:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
-      - uses: actions/setup-java@v1
-        with: {java-version: '11'}
-      - run: sudo apt-get install libunwind8-dev libre2-dev
-      - run: ci/test-mill-dev.sh
+  test:
+    strategy:
+      matrix:
+        java-version: [8, 11]
+        buildcmd:
+          - ci/test-mill-release.sh
+          - ci/test-mill-dev.sh
+          - ci/test-mill-bootstrap-0.sh
+          - ci/test-mill-bootstrap-1.sh
+          - ci/test-mill-0.sh
+          - ci/test-mill-1.sh
+          - ci/test-mill-2.sh
+          - ./mill -i docs.generate
+        exclude:
+          - java-version: 11
+            buildcmd: ci/test-mill-1.sh
+          - java-version: 11
+            buildcmd: ci/test-mill-release.sh
 
-  test-bootstrap-0-jdk8:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
-      - uses: actions/setup-java@v1
-        with: {java-version: '8'}
-      - run: sudo apt-get install libunwind8-dev libre2-dev
-      - run: ci/test-mill-bootstrap-0.sh
-  test-bootstrap-1-jdk9:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
-      - uses: actions/setup-java@v1
-        with: {java-version: '9'}
-      - run: ci/test-mill-bootstrap-1.sh
 
-  test-0-jdk10:
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
-      - uses: actions/setup-java@v1
-        with: {java-version: '10'}
-      - run: sudo apt-get install libunwind8-dev libre2-dev
-      - run: ci/test-mill-0.sh
-  test-1-jdk8:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
-      - uses: actions/setup-java@v1
-        with: {java-version: '8'}
-      - run: ci/test-mill-1.sh
-  test-2-jdk11:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
-      - uses: actions/setup-java@v1
-        with: {java-version: '11'}
-      - run: ci/test-mill-2.sh
+        with:
+          fetch-depth: 0
 
-  release-github:
-    runs-on: ubuntu-latest
-    env:
-      REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
       - uses: actions/setup-java@v1
-        with: {java-version: '9'}
-      - run: ci/on-master.py ci/release-github.sh
-  release-maven:
+        with:
+          java-version: ${{ matrix.java-version }}
+
+      - name: Prepare scala-native build
+        run: sudo apt-get install libunwind8-dev libre2-dev
+
+      - name: Run '${{ matrix.buildcmd }}'
+        run: |
+          git config --add user.name "Mill GithHub Actions"
+          git config --add user.email "mill-ci@localhost"
+          ${{ matrix.buildcmd }}
+
+  publish-sonatype:
+    if: github.repository == 'lihaoyi/mill' && github.ref == 'refs/heads/master'
+    needs: test
+
     runs-on: ubuntu-latest
+
     env:
       SONATYPE_PGP_SECRET: ${{ secrets.SONATYPE_PGP_SECRET }}
       SONATYPE_DEPLOY_USER: ${{ secrets.SONATYPE_DEPLOY_USER }}
@@ -90,19 +62,41 @@ jobs:
       LANG: "en_US.UTF-8"
       LC_MESSAGES: "en_US.UTF-8"
       LC_ALL: "en_US.UTF-8"
+
     steps:
       - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-java@v1
-        with: {java-version: '9'}
+        with:
+          java-version: 9
+
       - run: ci/on-master.py ci/release-maven.sh
-  publish-docs:
+
+  release-github-and-site:
+    if: github.repository == 'lihaoyi/mill' && github.ref == 'refs/heads/master'
+    needs: publish-sonatype
+
+    strategy:
+      matrix:
+        buildcmd:
+          - ci/on-master.py ci/release-github.sh
+          - ci/on-master.py ci/publish-docs.sh
+
     runs-on: ubuntu-latest
+
     env:
+      REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       REPO_DEPLOY_KEY: ${{ secrets.REPO_DEPLOY_KEY }}
+
     steps:
       - uses: actions/checkout@v2
-        with: {fetch-depth: 0}
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-java@v1
-        with: {java-version: '10'}
-      - run: ci/on-master.py ci/publish-docs.sh
+        with:
+          java-version: 9
+
+      - run: ${{ matrix.buildcmd }}
